# StudentManage

./: .gitignore  CMakeLists.txt  StudentManage_Gtest.cpp  StudentManage_Test.cpp  Subject.cpp
PatternTest/: CMakeLists.txt
PatternTest/AdapterPattern/: AdapterPattern_main.cpp  BinarySearch.cpp  BinarySearch.h  CMakeLists.txt  OperationAdapter.cpp  OperationAdapter.h  QuickSort.cpp  QuickSort.h  SubjectOperation.h
PatternTest/BuilderPattern/: BuilderPattern_main.cpp  CMakeLists.txt
PatternTest/FactoryPattern/: CMakeLists.txt  ChineseFactory.cpp  ChineseFactory.h  FactoryPattern_main.cpp  Student_pattern.cpp  Student_pattern.h  Teacher_pattern.cpp  Teacher_pattern.h
